--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <nav id="navmenu" class="navmenu" >
         <ul>
-          <li><a href="#hero" class="active">Welcome</a></li>
+          <li><a href="#hero" class="active">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -102,7 +102,7 @@
                   <i class="faq-toggle bi bi-chevron-right"></i>
                 </div><!-- End Faq item-->
   
-                <div class="faq-item faq-active" style="margin-left: 50px;">
+                <div class="faq-item faq-active" >
                   <h3>Publication and Media</h3>
                   <div class="faq-content">
                     <p>
@@ -112,7 +112,7 @@
                   <i class="faq-toggle bi bi-chevron-right"></i>
                 </div><!-- End Faq item-->
   
-                <div class="faq-item faq-active" style="margin-left: 50px;">
+                <div class="faq-item faq-active" >
                   <h3>CCSI Group</h3>
                   <div class="faq-content">
                     <p>
