--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
    
 
-       <section id="why-us" class="section why-us light-background" data-builder="section">
+       <section id="about" class="section why-us light-background" data-builder="section">
          <!-- Section Title -->
          <div class="container section-title" data-aos="fade-up">
           <h2>About Us</h2>
